--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,7 +67,7 @@ install:
   - cmd: set VS150COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools
 
 build_script:
-  - cmd: python %POLLY_ROOT%\bin\polly.py --toolchain %TOOLCHAIN% --config Release --verbose --fwd BUILD_SHARED_LIBS=%BUILD_SHARED_LIBS% --test
+  - cmd: python %POLLY_ROOT%\bin\polly.py --toolchain %TOOLCHAIN% --config Release --verbose --fwd BUILD_SHARED_LIBS=%BUILD_SHARED_LIBS% HUNTER_BUILD_SHARED_LIBS=%BUILD_SHARED_LIBS=ON --test
 
 # http://www.appveyor.com/docs/branches#white-and-blacklisting
 # Exclude branch 'pkg.template'. Nothing to build there.
