--- a/.travis.yml
+++ b/.travis.yml
@@ -117,7 +117,7 @@ install:
   - export ANDROID_NDK_r16b="`pwd`/_ci/android-ndk-r16b"
 
 script:
-  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} --ios-multiarch --ios-combined --discard 10 --tail 200 --test
+  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} HUNTER_SUPPRESS_LIST_OF_FILES=ON --ios-multiarch --ios-combined --discard 10 --tail 200 --test
 
 # https://docs.travis-ci.com/user/customizing-the-build/#Whitelisting-or-blacklisting-branches
 # Exclude branch 'pkg.template'. Nothing to build there.
