--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,25 +7,28 @@ environment:
 
   matrix:
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64"
-      BUILD_SHARED_LIBS: ON
+    # FIXME
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #   TOOLCHAIN: "vs-15-2017-win64"
+    #   BUILD_SHARED_LIBS: ON
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLCHAIN: "vs-15-2017-win64"
       BUILD_SHARED_LIBS: OFF
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-14-2015-win64"
-      BUILD_SHARED_LIBS: ON
+    # FIXME
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    #   TOOLCHAIN: "vs-14-2015-win64"
+    #   BUILD_SHARED_LIBS: ON
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOOLCHAIN: "vs-14-2015-win64"
       BUILD_SHARED_LIBS: OFF
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-12-2013-win64"
-      BUILD_SHARED_LIBS: ON
+    # FIXME
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    #   TOOLCHAIN: "vs-12-2013-win64"
+    #   BUILD_SHARED_LIBS: ON
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       TOOLCHAIN: "vs-12-2013-win64"
