--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,15 @@ matrix:
       env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=ON
 
     - os: linux
-      env: TOOLCHAIN=android-ndk-r16b-api-16-x86-clang-libcxx14 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=OFF
 
-    - os: linux
-      env: TOOLCHAIN=android-ndk-r16b-api-21-arm64-v8a-neon-clang-libcxx14 BUILD_SHARED_LIBS=ON
+    # FIXME (emulator image)
+    # - os: linux
+    #   env: TOOLCHAIN=android-ndk-r16b-api-16-x86-clang-libcxx14 BUILD_SHARED_LIBS=OFF
+
+    # FIXME (emulator image)
+    # - os: linux
+    #   env: TOOLCHAIN=android-ndk-r16b-api-21-arm64-v8a-neon-clang-libcxx14 BUILD_SHARED_LIBS=ON
 
     - os: linux
       env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=ON
