--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,9 @@ environment:
 
   matrix:
 
-    # FIXME
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #   TOOLCHAIN: "vs-15-2017-win64"
-    #   BUILD_SHARED_LIBS: ON
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLCHAIN: "vs-15-2017-win64"
+      BUILD_SHARED_LIBS: ON
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLCHAIN: "vs-15-2017-win64"
@@ -21,19 +20,20 @@ environment:
     #   TOOLCHAIN: "vs-14-2015-win64"
     #   BUILD_SHARED_LIBS: ON
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-14-2015-win64"
-      BUILD_SHARED_LIBS: OFF
+    # FIXME
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    #   TOOLCHAIN: "vs-14-2015-win64"
+    #   BUILD_SHARED_LIBS: OFF
 
     # FIXME
     # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     #   TOOLCHAIN: "vs-12-2013-win64"
     #   BUILD_SHARED_LIBS: ON
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-12-2013-win64"
-      BUILD_SHARED_LIBS: OFF
-
+    # FIXME
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    #   TOOLCHAIN: "vs-12-2013-win64"
+    #   BUILD_SHARED_LIBS: OFF
 
 install:
   # Python 3
