Visual Studio: Update PATH for test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,23 @@ if(IOS AND IGNORE_IOS_TEST)
   # ignore native test
 else()
   gauze_add_test(NAME foo COMMAND foo)
+
+  if(WIN32 OR CYGWIN)
+    set(new_path "${ICU_ROOT}/bin")
+    list(APPEND new_path $ENV{PATH})
+
+    if(WIN32)
+      string(REPLACE ";" "\;" new_path "${new_path}")
+    elseif(CYGWIN)
+      string(REPLACE ";" ":" new_path "${new_path}")
+    else()
+      message(FATAL_ERROR "Unreachable")
+    endif()
+
+    set_tests_properties(
+        foo PROPERTIES ENVIRONMENT "PATH=${new_path}"
+    )
+  endif()
 endif()
 
 # }
