Travis: test archive mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,13 @@ matrix:
     # Linux {
 
     - os: linux
-      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=ON
+      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
 
     - os: linux
-      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
+
+    - os: linux
+      env: TOOLCHAIN=android-ndk-r16b-api-16-armeabi-v7a-clang-libcxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     # FIXME (emulator image)
     # - os: linux
@@ -50,16 +53,22 @@ matrix:
     #   env: TOOLCHAIN=android-ndk-r16b-api-21-arm64-v8a-neon-clang-libcxx14 BUILD_SHARED_LIBS=ON
 
     - os: linux
-      env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=ON
+      env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
 
     - os: linux
-      env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
 
     - os: linux
-      env: TOOLCHAIN=gcc-7-cxx17 BUILD_SHARED_LIBS=ON
+      env: TOOLCHAIN=clang-cxx17 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     - os: linux
-      env: TOOLCHAIN=gcc-7-cxx17 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=gcc-7-cxx17 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
+
+    - os: linux
+      env: TOOLCHAIN=gcc-7-cxx17 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
+
+    - os: linux
+      env: TOOLCHAIN=gcc-7-cxx17 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     # }
 
@@ -72,19 +81,27 @@ matrix:
 
     - os: osx
       osx_image: xcode9.2
-      env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=ON
+      env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
 
     - os: osx
       osx_image: xcode9.2
-      env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
 
     - os: osx
       osx_image: xcode9.2
-      env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=ON
+      env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     - os: osx
       osx_image: xcode9.2
-      env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=OFF
+      env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
+
+    - os: osx
+      osx_image: xcode9.2
+      env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
+
+    - os: osx
+      osx_image: xcode9.2
+      env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     # }
 
