--- a/.travis.yml
+++ b/.travis.yml
@@ -140,8 +140,8 @@ install:
   - export ANDROID_NDK_r16b="`pwd`/_ci/android-ndk-r16b"
 
 script:
-  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES GAUZE_ANDROID_EMULATOR_GPU=off IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} HUNTER_SUPPRESS_LIST_OF_FILES=ON --ios-multiarch --ios-combined --discard 10 --tail 200
-  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES GAUZE_ANDROID_EMULATOR_GPU=off IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} HUNTER_SUPPRESS_LIST_OF_FILES=ON --ios-multiarch --ios-combined --test
+  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES GAUZE_ANDROID_EMULATOR_GPU=off IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} HUNTER_SUPPRESS_LIST_OF_FILES=ON ARCHIVE_MODE=${ARCHIVE_MODE} --ios-multiarch --ios-combined --discard 10 --tail 200
+  - polly.py --toolchain ${TOOLCHAIN} --config Release --verbose --fwd BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} GAUZE_ANDROID_USE_EMULATOR=YES GAUZE_ANDROID_EMULATOR_GPU=off IGNORE_IOS_TEST=ON HUNTER_BUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} HUNTER_SUPPRESS_LIST_OF_FILES=ON ARCHIVE_MODE=${ARCHIVE_MODE} --ios-multiarch --ios-combined --test
 
 # https://docs.travis-ci.com/user/customizing-the-build/#Whitelisting-or-blacklisting-branches
 # Exclude branch 'pkg.template'. Nothing to build there.
