--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,25 +22,21 @@ environment:
       BUILD_SHARED_LIBS: OFF
       ARCHIVE_MODE: ON
 
-    # FIXME
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    #   TOOLCHAIN: "vs-14-2015-win64"
-    #   BUILD_SHARED_LIBS: ON
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      TOOLCHAIN: "vs-14-2015-win64"
+      BUILD_SHARED_LIBS: ON
 
-    # FIXME
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    #   TOOLCHAIN: "vs-14-2015-win64"
-    #   BUILD_SHARED_LIBS: OFF
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      TOOLCHAIN: "vs-14-2015-win64"
+      BUILD_SHARED_LIBS: OFF
 
-    # FIXME
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    #   TOOLCHAIN: "vs-12-2013-win64"
-    #   BUILD_SHARED_LIBS: ON
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      TOOLCHAIN: "vs-12-2013-win64"
+      BUILD_SHARED_LIBS: ON
 
-    # FIXME
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    #   TOOLCHAIN: "vs-12-2013-win64"
-    #   BUILD_SHARED_LIBS: OFF
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      TOOLCHAIN: "vs-12-2013-win64"
+      BUILD_SHARED_LIBS: OFF
 
 install:
   # Python 3
