--- a/.travis.yml
+++ b/.travis.yml
@@ -74,33 +74,32 @@ matrix:
 
     # macOS {
 
-    # FIXME
-    # - os: osx
-    #   osx_image: xcode9.2
-    #   env: TOOLCHAIN=ios-nocodesign-11-2-dep-9-3 BUILD_SHARED_LIBS=OFF
+    - os: osx
+      osx_image: xcode9.3
+      env: TOOLCHAIN=ios-nocodesign-11-3-dep-9-3 BUILD_SHARED_LIBS=OFF
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-make-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=ON ARCHIVE_MODE=OFF
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=OFF
 
     - os: osx
-      osx_image: xcode9.2
+      osx_image: xcode9.3
       env: TOOLCHAIN=osx-10-13-cxx14 BUILD_SHARED_LIBS=OFF ARCHIVE_MODE=ON
 
     # }
