Add UWP testing

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,21 @@ environment:
   matrix:
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+      BUILD_SHARED_LIBS: ON
+      ARCHIVE_MODE: OFF
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+      BUILD_SHARED_LIBS: OFF
+      ARCHIVE_MODE: OFF
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+      BUILD_SHARED_LIBS: OFF
+      ARCHIVE_MODE: ON
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       TOOLCHAIN: "vs-15-2017-win64"
       BUILD_SHARED_LIBS: ON
       ARCHIVE_MODE: OFF
