appveyor.yml: Reorder variables

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,54 +7,54 @@ environment:
 
   matrix:
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+    - TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
       BUILD_SHARED_LIBS: ON
       ARCHIVE_MODE: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       HUNTER_BINARY_DIR: C:\__BIN
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+    - TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
       BUILD_SHARED_LIBS: OFF
       ARCHIVE_MODE: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       HUNTER_BINARY_DIR: C:\__BIN
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
+    - TOOLCHAIN: "vs-15-2017-win64-store-10-cxx17"
       BUILD_SHARED_LIBS: OFF
       ARCHIVE_MODE: ON
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       HUNTER_BINARY_DIR: C:\__BIN
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64"
+    - TOOLCHAIN: "vs-15-2017-win64"
       BUILD_SHARED_LIBS: ON
       ARCHIVE_MODE: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64"
+    - TOOLCHAIN: "vs-15-2017-win64"
       BUILD_SHARED_LIBS: OFF
       ARCHIVE_MODE: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      TOOLCHAIN: "vs-15-2017-win64"
+    - TOOLCHAIN: "vs-15-2017-win64"
       BUILD_SHARED_LIBS: OFF
       ARCHIVE_MODE: ON
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-14-2015-win64"
+    - TOOLCHAIN: "vs-14-2015-win64"
       BUILD_SHARED_LIBS: ON
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-14-2015-win64"
+    - TOOLCHAIN: "vs-14-2015-win64"
       BUILD_SHARED_LIBS: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-12-2013-win64"
+    - TOOLCHAIN: "vs-12-2013-win64"
       BUILD_SHARED_LIBS: ON
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      TOOLCHAIN: "vs-12-2013-win64"
+    - TOOLCHAIN: "vs-12-2013-win64"
       BUILD_SHARED_LIBS: OFF
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
 
 install:
   # Python 3
