--- a/.travis.yml
+++ b/.travis.yml
@@ -53,17 +53,19 @@ matrix:
         BUILD_SHARED_LIBS=OFF
         ARCHIVE_MODE=ON
 
-    # FIXME (emulator image)
+    # It's not possible to start Android x86 emulator on Travis
     # - os: linux
     #   env: >
     #     TOOLCHAIN=android-ndk-r16b-api-16-x86-clang-libcxx14
     #     BUILD_SHARED_LIBS=OFF
+    #     ARCHIVE_MODE=OFF
 
-    # FIXME (emulator image)
-    # - os: linux
-    #   env: >
-    #     TOOLCHAIN=android-ndk-r16b-api-21-arm64-v8a-neon-clang-libcxx14
-    #     BUILD_SHARED_LIBS=ON
+    # Note: Android arm64-v8a emulator is available only since API 24
+    - os: linux
+      env: >
+        TOOLCHAIN=android-ndk-r16b-api-24-arm64-v8a-clang-libcxx14
+        BUILD_SHARED_LIBS=ON
+        ARCHIVE_MODE=OFF
 
     - os: linux
       env: >
@@ -110,6 +112,7 @@ matrix:
       env: >
         TOOLCHAIN=ios-nocodesign-11-3-dep-9-3
         BUILD_SHARED_LIBS=OFF
+        ARCHIVE_MODE=OFF
 
     - os: osx
       osx_image: xcode9.3
